@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -38,6 +38,12 @@
     ]
   },
   "operatingsystem_support": [
+    {
+      "operatingsystem": "Amazon",
+      "operatingsystemrelease": [
+        "2"
+      ]
+    },
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
