@@ -1,3 +1,6 @@
+* Sun Mar 20 2022 Trevor Vaughan <trevor@sicura.us> - 0.5.1
+- Support Amazon Linux 2
+
 * Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
